Update README and notebooks

--- a/notebooks/corso-kg-neo4j.ipynb
+++ b/notebooks/corso-kg-neo4j.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "b2fa9b19-1afd-4dd9-8ea0-b996b946b4aa",
    "metadata": {},
    "outputs": [
@@ -220,7 +220,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
+   "id": "44ac1028-0e34-4ac6-8eee-48031def66a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e.name\te.surname\t\n",
+      "Olivia\tWilson\t\n",
+      "David\tBrown\t\n",
+      "Jane\tTaylor\t\n",
+      "David\tDavis\t\n",
+      "Emma\tJohnson\t\n",
+      "David\tMiller\t\n",
+      "Michael\tWilson\t\n",
+      "Jane\tDavis\t\n",
+      "David\tHarris\t\n",
+      "David\tTaylor\t\n",
+      "Daniel\tBrown\t\n",
+      "Emma\tClark\t\n",
+      "Sophia\tJohnson\t\n",
+      "Sophia\tHarris\t\n",
+      "Jane\tBrown\t\n",
+      "Michael\tJohnson\t\n",
+      "David\tMiller\t\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Employees with a given competence\n",
+    "competence = \"3.4\"\n",
+    "custom_query = f\"\"\"\n",
+    "    MATCH (e:Employee)-[:HAS_COMPETENCE]->(c:Competence {{ competenceId : '{competence}'}}) \n",
+    "    RETURN e.name, e.surname\n",
+    "\"\"\"\n",
+    "execute_query(custom_query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "bc752dc1-97ca-4020-817e-0e7e25a0b850",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c.name\tcollect(oe.employeeId)\t\n",
+      "Netiquette\t['EMPLOYEE_19', 'EMPLOYEE_12', 'EMPLOYEE_20', 'EMPLOYEE_21', 'EMPLOYEE_4', 'EMPLOYEE_9', 'EMPLOYEE_13', 'EMPLOYEE_6', 'EMPLOYEE_16', 'EMPLOYEE_8', 'EMPLOYEE_15', 'EMPLOYEE_23', 'EMPLOYEE_10', 'EMPLOYEE_22', 'EMPLOYEE_5', 'EMPLOYEE_1']\t\n",
+      "Copyright and licences\t['EMPLOYEE_16', 'EMPLOYEE_22', 'EMPLOYEE_2', 'EMPLOYEE_13', 'EMPLOYEE_4', 'EMPLOYEE_27', 'EMPLOYEE_29', 'EMPLOYEE_30', 'EMPLOYEE_20', 'EMPLOYEE_6', 'EMPLOYEE_28', 'EMPLOYEE_8', 'EMPLOYEE_23', 'EMPLOYEE_3']\t\n",
+      "Protecting personal data and privacy\t['EMPLOYEE_17', 'EMPLOYEE_16', 'EMPLOYEE_23', 'EMPLOYEE_10', 'EMPLOYEE_2', 'EMPLOYEE_19', 'EMPLOYEE_30', 'EMPLOYEE_22', 'EMPLOYEE_8', 'EMPLOYEE_3', 'EMPLOYEE_29', 'EMPLOYEE_4', 'EMPLOYEE_15', 'EMPLOYEE_20']\t\n",
+      "Creatively using digital technologies\t['EMPLOYEE_6', 'EMPLOYEE_16', 'EMPLOYEE_21', 'EMPLOYEE_3', 'EMPLOYEE_22', 'EMPLOYEE_30', 'EMPLOYEE_23', 'EMPLOYEE_10', 'EMPLOYEE_8', 'EMPLOYEE_19', 'EMPLOYEE_12', 'EMPLOYEE_2', 'EMPLOYEE_29', 'EMPLOYEE_4', 'EMPLOYEE_15', 'EMPLOYEE_9', 'EMPLOYEE_13']\t\n",
+      "Interacting through digital technologies\t['EMPLOYEE_10', 'EMPLOYEE_23', 'EMPLOYEE_25', 'EMPLOYEE_27', 'EMPLOYEE_4', 'EMPLOYEE_2', 'EMPLOYEE_6', 'EMPLOYEE_21', 'EMPLOYEE_16', 'EMPLOYEE_12', 'EMPLOYEE_15', 'EMPLOYEE_19', 'EMPLOYEE_22', 'EMPLOYEE_28', 'EMPLOYEE_18', 'EMPLOYEE_20', 'EMPLOYEE_1']\t\n",
+      "Managing data, information and digital content\t['EMPLOYEE_22', 'EMPLOYEE_29', 'EMPLOYEE_23', 'EMPLOYEE_6', 'EMPLOYEE_4', 'EMPLOYEE_17', 'EMPLOYEE_3', 'EMPLOYEE_15', 'EMPLOYEE_10', 'EMPLOYEE_16', 'EMPLOYEE_28', 'EMPLOYEE_9', 'EMPLOYEE_30', 'EMPLOYEE_8', 'EMPLOYEE_12', 'EMPLOYEE_2']\t\n",
+      "Protecting the environment\t['EMPLOYEE_16', 'EMPLOYEE_4', 'EMPLOYEE_23', 'EMPLOYEE_2', 'EMPLOYEE_20', 'EMPLOYEE_9', 'EMPLOYEE_29', 'EMPLOYEE_27', 'EMPLOYEE_12', 'EMPLOYEE_19', 'EMPLOYEE_13', 'EMPLOYEE_8']\t\n",
+      "Solving technical problems\t['EMPLOYEE_8', 'EMPLOYEE_4', 'EMPLOYEE_29', 'EMPLOYEE_12', 'EMPLOYEE_3', 'EMPLOYEE_22', 'EMPLOYEE_24', 'EMPLOYEE_16', 'EMPLOYEE_20', 'EMPLOYEE_10', 'EMPLOYEE_13', 'EMPLOYEE_23', 'EMPLOYEE_6', 'EMPLOYEE_19', 'EMPLOYEE_27', 'EMPLOYEE_1']\t\n",
+      "Protecting health and well-being\t['EMPLOYEE_5', 'EMPLOYEE_3', 'EMPLOYEE_22', 'EMPLOYEE_21', 'EMPLOYEE_6', 'EMPLOYEE_29', 'EMPLOYEE_17', 'EMPLOYEE_8', 'EMPLOYEE_23', 'EMPLOYEE_9', 'EMPLOYEE_4', 'EMPLOYEE_2', 'EMPLOYEE_12']\t\n",
+      "Programming\t['EMPLOYEE_24', 'EMPLOYEE_4', 'EMPLOYEE_23', 'EMPLOYEE_16', 'EMPLOYEE_15', 'EMPLOYEE_17', 'EMPLOYEE_10', 'EMPLOYEE_6', 'EMPLOYEE_19', 'EMPLOYEE_5', 'EMPLOYEE_29', 'EMPLOYEE_30', 'EMPLOYEE_22', 'EMPLOYEE_20', 'EMPLOYEE_28', 'EMPLOYEE_8']\t\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Employees having the competences of an employee\n",
+    "custom_query = \"\"\"\n",
+    "    MATCH (e:Employee {name:\"Jane\", surname:\"Brown\"})-[:HAS_COMPETENCE]->(c:Competence)<-[:HAS_COMPETENCE]-(oe:Employee) \n",
+    "    RETURN c.name, collect(oe.employeeId)\n",
+    "\"\"\"\n",
+    "execute_query(custom_query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "39feed1c-7e94-4b52-b566-a4f6c53eb14a",
    "metadata": {},
    "outputs": [
