--- a/notebooks/corso-kg-postgres.ipynb
+++ b/notebooks/corso-kg-postgres.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4f56337e-4185-4cc8-a3c3-fb400062320d",
    "metadata": {},
    "outputs": [
@@ -10,11 +10,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting psycopg2-binary\n",
-      "  Obtaining dependency information for psycopg2-binary from https://files.pythonhosted.org/packages/ce/85/62825cabc6aad53104b7b6d12eb2ad74737d268630032d07b74d4444cb72/psycopg2_binary-2.9.9-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata\n",
+      "Collecting psycopg2-binary==2.9.9\n",
+      "  Obtaining dependency information for psycopg2-binary==2.9.9 from https://files.pythonhosted.org/packages/ce/85/62825cabc6aad53104b7b6d12eb2ad74737d268630032d07b74d4444cb72/psycopg2_binary-2.9.9-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata\n",
       "  Downloading psycopg2_binary-2.9.9-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (4.4 kB)\n",
       "Downloading psycopg2_binary-2.9.9-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.0 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.0/3.0 MB\u001b[0m \u001b[31m29.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.0/3.0 MB\u001b[0m \u001b[31m6.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
       "\u001b[?25hInstalling collected packages: psycopg2-binary\n",
       "Successfully installed psycopg2-binary-2.9.9\n"
      ]
@@ -22,7 +22,7 @@
    ],
    "source": [
     "import sys\n",
-    "!{sys.executable} -m pip install psycopg2-binary"
+    "!{sys.executable} -m pip install psycopg2-binary==2.9.9"
    ]
   },
   {
