--- a/notebooks/corso-kg-rdf.ipynb
+++ b/notebooks/corso-kg-rdf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "04ce129b-0e6b-4e5a-b2f2-e61263c80736",
    "metadata": {},
    "outputs": [
@@ -10,31 +10,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: rdflib==7.0.0 in /opt/conda/lib/python3.11/site-packages (7.0.0)\n",
-      "Requirement already satisfied: yatter==1.1.0 in /opt/conda/lib/python3.11/site-packages (1.1.0)\n",
-      "Requirement already satisfied: morph-kgc==2.6.3 in /opt/conda/lib/python3.11/site-packages (2.6.3)\n",
-      "Requirement already satisfied: isodate<0.7.0,>=0.6.0 in /opt/conda/lib/python3.11/site-packages (from rdflib==7.0.0) (0.6.1)\n",
-      "Requirement already satisfied: pyparsing<4,>=2.1.0 in /opt/conda/lib/python3.11/site-packages (from rdflib==7.0.0) (3.0.9)\n",
+      "Collecting rdflib==7.0.0\n",
+      "  Obtaining dependency information for rdflib==7.0.0 from https://files.pythonhosted.org/packages/d4/b0/7b7d8b5b0d01f1a0b12cc2e5038a868ef3a15825731b8a0d776cf47566c0/rdflib-7.0.0-py3-none-any.whl.metadata\n",
+      "  Downloading rdflib-7.0.0-py3-none-any.whl.metadata (11 kB)\n",
+      "Collecting yatter==1.1.0\n",
+      "  Downloading yatter-1.1.0-py3-none-any.whl (21 kB)\n",
+      "Collecting morph-kgc==2.6.3\n",
+      "  Obtaining dependency information for morph-kgc==2.6.3 from https://files.pythonhosted.org/packages/ea/4a/58e493fcfe35cfac4b2312f2d246e3f404956086cf7125b1ffc8ef1508ef/morph_kgc-2.6.3-py3-none-any.whl.metadata\n",
+      "  Downloading morph_kgc-2.6.3-py3-none-any.whl.metadata (10 kB)\n",
+      "Collecting isodate<0.7.0,>=0.6.0 (from rdflib==7.0.0)\n",
+      "  Downloading isodate-0.6.1-py2.py3-none-any.whl (41 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m41.7/41.7 kB\u001b[0m \u001b[31m4.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: pyparsing<4,>=2.1.0 in /opt/conda/lib/python3.11/site-packages (from rdflib==7.0.0) (3.0.9)\n",
       "Requirement already satisfied: ruamel.yaml>=0.17.21 in /opt/conda/lib/python3.11/site-packages (from yatter==1.1.0) (0.17.32)\n",
-      "Requirement already satisfied: coloredlogs>=15.0.1 in /opt/conda/lib/python3.11/site-packages (from yatter==1.1.0) (15.0.1)\n",
-      "Requirement already satisfied: duckdb<0.8.0,>=0.7.0 in /opt/conda/lib/python3.11/site-packages (from morph-kgc==2.6.3) (0.7.1)\n",
-      "Requirement already satisfied: elementpath<5.0.0,>=4.0.0 in /opt/conda/lib/python3.11/site-packages (from morph-kgc==2.6.3) (4.1.5)\n",
-      "Requirement already satisfied: falcon<4.0.0,>=3.0.0 in /opt/conda/lib/python3.11/site-packages (from morph-kgc==2.6.3) (3.1.1)\n",
-      "Requirement already satisfied: jsonpath-python<2.0.0,>=1.0.6 in /opt/conda/lib/python3.11/site-packages (from morph-kgc==2.6.3) (1.0.6)\n",
+      "Collecting coloredlogs>=15.0.1 (from yatter==1.1.0)\n",
+      "  Downloading coloredlogs-15.0.1-py2.py3-none-any.whl (46 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m46.0/46.0 kB\u001b[0m \u001b[31m3.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hCollecting duckdb<0.8.0,>=0.7.0 (from morph-kgc==2.6.3)\n",
+      "  Downloading duckdb-0.7.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (15.2 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m15.2/15.2 MB\u001b[0m \u001b[31m11.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hCollecting elementpath<5.0.0,>=4.0.0 (from morph-kgc==2.6.3)\n",
+      "  Obtaining dependency information for elementpath<5.0.0,>=4.0.0 from https://files.pythonhosted.org/packages/eb/4f/fecd0fc5adc5f91a6154189ea7b2192cf62ce7d685a0e9b23737acb31808/elementpath-4.1.5-py3-none-any.whl.metadata\n",
+      "  Downloading elementpath-4.1.5-py3-none-any.whl.metadata (6.7 kB)\n",
+      "Collecting falcon<4.0.0,>=3.0.0 (from morph-kgc==2.6.3)\n",
+      "  Downloading falcon-3.1.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (9.1 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m9.1/9.1 MB\u001b[0m \u001b[31m9.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0mm\n",
+      "\u001b[?25hCollecting jsonpath-python<2.0.0,>=1.0.6 (from morph-kgc==2.6.3)\n",
+      "  Downloading jsonpath_python-1.0.6-py3-none-any.whl (7.6 kB)\n",
       "Requirement already satisfied: pandas<3.0.0,>=2.0.0 in /opt/conda/lib/python3.11/site-packages (from morph-kgc==2.6.3) (2.0.3)\n",
-      "Requirement already satisfied: pyoxigraph<0.4.0,>=0.3.0 in /opt/conda/lib/python3.11/site-packages (from morph-kgc==2.6.3) (0.3.20)\n",
-      "Requirement already satisfied: sql-metadata<3.0.0,>=2.6.0 in /opt/conda/lib/python3.11/site-packages (from morph-kgc==2.6.3) (2.9.0)\n",
+      "Collecting pyoxigraph<0.4.0,>=0.3.0 (from morph-kgc==2.6.3)\n",
+      "  Obtaining dependency information for pyoxigraph<0.4.0,>=0.3.0 from https://files.pythonhosted.org/packages/cc/80/b24218bdffd3033139afedb92b248695235db7facb3a05cbf838712c41fd/pyoxigraph-0.3.20-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata\n",
+      "  Downloading pyoxigraph-0.3.20-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (5.3 kB)\n",
+      "Collecting sql-metadata<3.0.0,>=2.6.0 (from morph-kgc==2.6.3)\n",
+      "  Obtaining dependency information for sql-metadata<3.0.0,>=2.6.0 from https://files.pythonhosted.org/packages/c3/86/79cf7b55c7ffec6e817252ac8aaa6337969fe36b2085b5d9a29f32e1ea38/sql_metadata-2.9.0-py3-none-any.whl.metadata\n",
+      "  Downloading sql_metadata-2.9.0-py3-none-any.whl.metadata (9.7 kB)\n",
       "Requirement already satisfied: sqlalchemy<3.0.0,>=2.0.0 in /opt/conda/lib/python3.11/site-packages (from morph-kgc==2.6.3) (2.0.19)\n",
-      "Requirement already satisfied: humanfriendly>=9.1 in /opt/conda/lib/python3.11/site-packages (from coloredlogs>=15.0.1->yatter==1.1.0) (10.0)\n",
-      "Requirement already satisfied: six in /opt/conda/lib/python3.11/site-packages (from isodate<0.7.0,>=0.6.0->rdflib==7.0.0) (1.16.0)\n",
+      "Collecting humanfriendly>=9.1 (from coloredlogs>=15.0.1->yatter==1.1.0)\n",
+      "  Downloading humanfriendly-10.0-py2.py3-none-any.whl (86 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m86.8/86.8 kB\u001b[0m \u001b[31m15.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: six in /opt/conda/lib/python3.11/site-packages (from isodate<0.7.0,>=0.6.0->rdflib==7.0.0) (1.16.0)\n",
       "Requirement already satisfied: python-dateutil>=2.8.2 in /opt/conda/lib/python3.11/site-packages (from pandas<3.0.0,>=2.0.0->morph-kgc==2.6.3) (2.8.2)\n",
       "Requirement already satisfied: pytz>=2020.1 in /opt/conda/lib/python3.11/site-packages (from pandas<3.0.0,>=2.0.0->morph-kgc==2.6.3) (2023.3)\n",
       "Requirement already satisfied: tzdata>=2022.1 in /opt/conda/lib/python3.11/site-packages (from pandas<3.0.0,>=2.0.0->morph-kgc==2.6.3) (2023.3)\n",
       "Requirement already satisfied: numpy>=1.21.0 in /opt/conda/lib/python3.11/site-packages (from pandas<3.0.0,>=2.0.0->morph-kgc==2.6.3) (1.24.4)\n",
       "Requirement already satisfied: ruamel.yaml.clib>=0.2.7 in /opt/conda/lib/python3.11/site-packages (from ruamel.yaml>=0.17.21->yatter==1.1.0) (0.2.7)\n",
-      "Requirement already satisfied: sqlparse<0.5.0,>=0.4.1 in /opt/conda/lib/python3.11/site-packages (from sql-metadata<3.0.0,>=2.6.0->morph-kgc==2.6.3) (0.4.4)\n",
-      "Requirement already satisfied: typing-extensions>=4.2.0 in /opt/conda/lib/python3.11/site-packages (from sqlalchemy<3.0.0,>=2.0.0->morph-kgc==2.6.3) (4.7.1)\n",
-      "Requirement already satisfied: greenlet!=0.4.17 in /opt/conda/lib/python3.11/site-packages (from sqlalchemy<3.0.0,>=2.0.0->morph-kgc==2.6.3) (2.0.2)\n"
+      "Collecting sqlparse<0.5.0,>=0.4.1 (from sql-metadata<3.0.0,>=2.6.0->morph-kgc==2.6.3)\n",
+      "  Downloading sqlparse-0.4.4-py3-none-any.whl (41 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m41.2/41.2 kB\u001b[0m \u001b[31m6.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: typing-extensions>=4.2.0 in /opt/conda/lib/python3.11/site-packages (from sqlalchemy<3.0.0,>=2.0.0->morph-kgc==2.6.3) (4.7.1)\n",
+      "Requirement already satisfied: greenlet!=0.4.17 in /opt/conda/lib/python3.11/site-packages (from sqlalchemy<3.0.0,>=2.0.0->morph-kgc==2.6.3) (2.0.2)\n",
+      "Downloading rdflib-7.0.0-py3-none-any.whl (531 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m531.9/531.9 kB\u001b[0m \u001b[31m28.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading morph_kgc-2.6.3-py3-none-any.whl (53 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m53.2/53.2 kB\u001b[0m \u001b[31m3.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading elementpath-4.1.5-py3-none-any.whl (216 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m216.4/216.4 kB\u001b[0m \u001b[31m30.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading pyoxigraph-0.3.20-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (6.8 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.8/6.8 MB\u001b[0m \u001b[31m5.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0mm\n",
+      "\u001b[?25hDownloading sql_metadata-2.9.0-py3-none-any.whl (21 kB)\n",
+      "Installing collected packages: duckdb, sqlparse, pyoxigraph, jsonpath-python, isodate, humanfriendly, falcon, elementpath, sql-metadata, rdflib, coloredlogs, yatter, morph-kgc\n",
+      "Successfully installed coloredlogs-15.0.1 duckdb-0.7.1 elementpath-4.1.5 falcon-3.1.1 humanfriendly-10.0 isodate-0.6.1 jsonpath-python-1.0.6 morph-kgc-2.6.3 pyoxigraph-0.3.20 rdflib-7.0.0 sql-metadata-2.9.0 sqlparse-0.4.4 yatter-1.1.0\n"
      ]
     }
    ],
@@ -45,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "567abcbb-890e-48a9-8180-c1424336e2e4",
    "metadata": {},
    "outputs": [],
@@ -57,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "3fe54e50-8e9b-410e-82c5-3b837f2f29bf",
    "metadata": {},
    "outputs": [
@@ -139,10 +174,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-25 09:41:25,702 | INFO: Translating YARRRML mapping to [R2]RML\n",
-      "2023-10-25 09:41:25,703 | INFO: RML content is created!\n",
-      "2023-10-25 09:41:25,714 | INFO: Mapping has been syntactically validated.\n",
-      "2023-10-25 09:41:25,714 | INFO: Translation has finished successfully.\n"
+      "2023-10-27 15:52:31,910 | INFO: Translating YARRRML mapping to [R2]RML\n",
+      "2023-10-27 15:52:31,913 | INFO: RML content is created!\n",
+      "2023-10-27 15:52:31,927 | INFO: Mapping has been syntactically validated.\n",
+      "2023-10-27 15:52:31,929 | INFO: Translation has finished successfully.\n"
      ]
     }
    ],
@@ -174,24 +209,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-25 09:41:26,477 | INFO: NumExpr defaulting to 8 threads.\n",
-      "2023-10-25 09:41:27,353 | DEBUG: CONFIGURATION: {'output_file': 'knowledge-graph', 'na_values': ',nan', 'safe_percent_encoding': '', 'read_parsed_mappings_path': '', 'write_parsed_mappings_path': '', 'mapping_partitioning': 'PARTIAL-AGGREGATIONS', 'logging_file': '', 'oracle_client_lib_dir': '', 'oracle_client_config_dir': '', 'udfs': '', 'output_dir': '', 'output_format': 'N-TRIPLES', 'only_printable_chars': 'no', 'infer_sql_datatypes': 'no', 'logging_level': 'INFO', 'number_of_processes': '16'}\n",
-      "2023-10-25 09:41:27,354 | DEBUG: DATA SOURCE `Competences`: {'mappings': './../mappings/corso-kg-rml.ttl'}\n",
-      "2023-10-25 09:41:28,067 | DEBUG: Removed self-join from mapping rule `#TM6`.\n",
-      "2023-10-25 09:41:28,072 | INFO: 13 mapping rules retrieved.\n",
-      "2023-10-25 09:41:28,087 | DEBUG: All predicate maps are constant-valued, invariant subset is not enforced.\n",
-      "2023-10-25 09:41:28,094 | DEBUG: All graph maps are constant-valued, invariant subset is not enforced.\n",
-      "2023-10-25 09:41:28,099 | INFO: Mapping partition with 13 groups generated.\n",
-      "2023-10-25 09:41:28,101 | INFO: Maximum number of rules within mapping group: 1.\n",
-      "2023-10-25 09:41:28,102 | INFO: Mappings processed in 0.735 seconds.\n",
-      "2023-10-25 09:41:28,106 | DEBUG: Parallelizing with 16 cores.\n",
-      "2023-10-25 09:41:28,593 | INFO: Number of triples generated in total: 1813.\n"
+      "2023-10-27 15:52:33,114 | DEBUG: CONFIGURATION: {'output_file': 'knowledge-graph', 'na_values': ',nan', 'safe_percent_encoding': '', 'read_parsed_mappings_path': '', 'write_parsed_mappings_path': '', 'mapping_partitioning': 'PARTIAL-AGGREGATIONS', 'logging_file': '', 'oracle_client_lib_dir': '', 'oracle_client_config_dir': '', 'udfs': '', 'output_dir': '', 'output_format': 'N-TRIPLES', 'only_printable_chars': 'no', 'infer_sql_datatypes': 'no', 'logging_level': 'INFO', 'number_of_processes': '16'}\n",
+      "2023-10-27 15:52:33,116 | DEBUG: DATA SOURCE `Competences`: {'mappings': './../mappings/corso-kg-rml.ttl'}\n",
+      "2023-10-27 15:52:34,928 | DEBUG: Removed self-join from mapping rule `#TM6`.\n",
+      "2023-10-27 15:52:34,936 | INFO: 13 mapping rules retrieved.\n",
+      "2023-10-27 15:52:34,959 | DEBUG: All predicate maps are constant-valued, invariant subset is not enforced.\n",
+      "2023-10-27 15:52:34,973 | DEBUG: All graph maps are constant-valued, invariant subset is not enforced.\n",
+      "2023-10-27 15:52:34,981 | INFO: Mapping partition with 13 groups generated.\n",
+      "2023-10-27 15:52:34,984 | INFO: Maximum number of rules within mapping group: 1.\n",
+      "2023-10-27 15:52:34,985 | INFO: Mappings processed in 1.862 seconds.\n",
+      "2023-10-27 15:52:34,992 | DEBUG: Parallelizing with 16 cores.\n",
+      "2023-10-27 15:52:35,538 | INFO: Number of triples generated in total: 1813.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<Graph identifier=N279917ac0921461f9b4707d35a8b24f7 (<class 'rdflib.graph.Graph'>)>"
+       "<Graph identifier=Nb69646e39d1b406ca960118362b4f1ae (<class 'rdflib.graph.Graph'>)>"
       ]
      },
      "execution_count": 7,
@@ -252,7 +286,7 @@
     {
      "data": {
       "text/plain": [
-       "<Graph identifier=N51e5ccd79c814018b4afcf303da58eea (<class 'rdflib.graph.Graph'>)>"
+       "<Graph identifier=N1a8bc7d5c559415aa2fed58e3b3c5fd9 (<class 'rdflib.graph.Graph'>)>"
       ]
      },
      "execution_count": 9,
@@ -284,7 +318,7 @@
     {
      "data": {
       "text/plain": [
-       "<Graph identifier=N279917ac0921461f9b4707d35a8b24f7 (<class 'rdflib.graph.Graph'>)>"
+       "<Graph identifier=N1a8bc7d5c559415aa2fed58e3b3c5fd9 (<class 'rdflib.graph.Graph'>)>"
       ]
      },
      "execution_count": 10,
@@ -301,18 +335,18 @@
     "\n",
     "# Save to file\n",
     "output_file = join(folder, \"rdf/knowledge-graph-enriched.ttl\")\n",
-    "g_rdflib.serialize(destination=output_file, format='ttl', encoding=\"utf-8\")"
+    "g_enriched.serialize(destination=output_file, format='ttl', encoding=\"utf-8\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "806991f4-3d37-4f7e-8ff6-b9c07b114bac",
    "metadata": {},
    "outputs": [],
    "source": [
     "sparql_query = \"\"\"\n",
-    "PREFIX cefriel: <http://www.cefriel.com/corso-kg/schema/>\n",
+    "PREFIX cefriel: <https://knowledge.c-innovationhub.com/competence-kg/schema#>\n",
     "PREFIX foaf: <http://xmlns.com/foaf/0.1/>\n",
     "PREFIX skos: <http://www.w3.org/2004/02/skos/core#>\n",
     "\n",
@@ -321,8 +355,8 @@
     "    ?employee foaf:name \"Jane\" .\n",
     "    ?employee foaf:surname \"Brown\" .\n",
     "    ?ec a cefriel:EmployeeCompetence ;\n",
-    "        cefriel:employee ?employee ;\n",
-    "        cefriel:competence ?c .\n",
+    "        cefriel:isAssignedToEmployee ?employee ;\n",
+    "        cefriel:hasAssignedCompetence ?c .\n",
     "    OPTIONAL {?c skos:prefLabel ?label .} \n",
     "}\n",
     "\"\"\""
@@ -330,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "f3d43844-7808-4799-a37e-b03b8b16100a",
    "metadata": {},
    "outputs": [
@@ -339,16 +373,16 @@
      "output_type": "stream",
      "text": [
       "Competence\n",
-      "http://data.europa.eu/snb/dcf/o9e8s72z21\tNone\n",
-      "http://data.europa.eu/snb/dcf/4s23kdq383\tNone\n",
-      "http://data.europa.eu/snb/dcf/2mi55kl065\tNone\n",
-      "http://data.europa.eu/snb/dcf/1b043jw49b\tNone\n",
-      "http://data.europa.eu/snb/dcf/13z458t54u\tNone\n",
-      "http://data.europa.eu/snb/dcf/99vvo91542\tNone\n",
       "http://data.europa.eu/snb/dcf/0690r7o8r2\tNone\n",
       "http://data.europa.eu/snb/dcf/3bgx2a6278\tNone\n",
+      "http://data.europa.eu/snb/dcf/1b043jw49b\tNone\n",
+      "http://data.europa.eu/snb/dcf/99vvo91542\tNone\n",
+      "http://data.europa.eu/snb/dcf/13z458t54u\tNone\n",
+      "http://data.europa.eu/snb/dcf/mg54my1580\tNone\n",
+      "http://data.europa.eu/snb/dcf/2mi55kl065\tNone\n",
+      "http://data.europa.eu/snb/dcf/o9e8s72z21\tNone\n",
       "http://data.europa.eu/snb/dcf/8ys96p08p4\tNone\n",
-      "http://data.europa.eu/snb/dcf/mg54my1580\tNone\n"
+      "http://data.europa.eu/snb/dcf/4s23kdq383\tNone\n"
      ]
     }
    ],
@@ -362,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "093158a5-dd92-4af5-9939-0836791694b2",
    "metadata": {},
    "outputs": [
