Refactor corso-kg to competence-kg

--- a/notebooks/competence-kg-neo4j.ipynb
+++ b/notebooks/competence-kg-neo4j.ipynb
@@ -40,7 +40,7 @@
     "# Import the neo4j dependency\n",
     "from neo4j import GraphDatabase\n",
     "\n",
-    "uri = \"neo4j://corso-kg-neo4j:7687\"\n",
+    "uri = \"neo4j://competence-kg-neo4j:7687\"\n",
     "\n",
     "username = 'neo4j'\n",
     "password = 'kgCefriel'\n",
