--- a/notebooks/competence-kg-postgres.ipynb
+++ b/notebooks/competence-kg-postgres.ipynb
@@ -11,10 +11,9 @@
      "output_type": "stream",
      "text": [
       "Collecting psycopg2-binary==2.9.9\n",
-      "  Obtaining dependency information for psycopg2-binary==2.9.9 from https://files.pythonhosted.org/packages/ce/85/62825cabc6aad53104b7b6d12eb2ad74737d268630032d07b74d4444cb72/psycopg2_binary-2.9.9-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata\n",
       "  Downloading psycopg2_binary-2.9.9-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (4.4 kB)\n",
       "Downloading psycopg2_binary-2.9.9-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.0 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.0/3.0 MB\u001b[0m \u001b[31m6.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.0/3.0 MB\u001b[0m \u001b[31m20.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
       "\u001b[?25hInstalling collected packages: psycopg2-binary\n",
       "Successfully installed psycopg2-binary-2.9.9\n"
      ]
@@ -27,17 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "2f24bd7a-616a-42f2-a265-48d9b71b2ac6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<cursor object at 0x7fc7a5e22b60; closed: 0>"
+       "<cursor object at 0x7ffba74d5f30; closed: 0>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,8 +46,8 @@
     "\n",
     "# Establish a connection to the PostgreSQL database\n",
     "conn = psycopg2.connect(\n",
-    "    host=\"corso-kg-postgres\",\n",
-    "    database=\"corso-kg-postgres\",\n",
+    "    host=\"competence-kg-postgres\",\n",
+    "    database=\"competence-kg-postgres\",\n",
     "    user=\"postgres\",\n",
     "    password=\"kgCefriel\"\n",
     ")\n",
@@ -60,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "7c43dd7a-7806-44e5-83f0-2246b8fbaf8d",
    "metadata": {},
    "outputs": [
@@ -120,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "55730d93-e2ff-4217-af01-7fdb2e8cbe9b",
    "metadata": {},
    "outputs": [],
@@ -145,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "8256c731-fc23-4619-911a-1bfe8884a4d6",
    "metadata": {},
    "outputs": [
@@ -184,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "548feb5c-3e08-47ad-9fd7-1a6c3bc0f2c4",
    "metadata": {},
    "outputs": [
@@ -193,29 +192,29 @@
      "output_type": "stream",
      "text": [
       "id\tname\tsurname\tnum_competences\t\n",
-      "EMPLOYEE_23\tJane\tTaylor\t10\t\n",
       "EMPLOYEE_4\tDavid\tBrown\t10\t\n",
-      "EMPLOYEE_16\tDavid\tDavis\t9\t\n",
-      "EMPLOYEE_8\tDavid\tMiller\t9\t\n",
+      "EMPLOYEE_23\tJane\tTaylor\t10\t\n",
       "EMPLOYEE_22\tSophia\tJohnson\t9\t\n",
+      "EMPLOYEE_8\tDavid\tMiller\t9\t\n",
+      "EMPLOYEE_16\tDavid\tDavis\t9\t\n",
       "EMPLOYEE_6\tJane\tDavis\t8\t\n",
       "EMPLOYEE_29\tDaniel\tBrown\t8\t\n",
-      "EMPLOYEE_20\tSophia\tHarris\t7\t\n",
       "EMPLOYEE_19\tDavid\tHarris\t7\t\n",
       "EMPLOYEE_2\tDavid\tBrown\t7\t\n",
       "EMPLOYEE_10\tMichael\tWilson\t7\t\n",
       "EMPLOYEE_12\tDavid\tJohnson\t7\t\n",
-      "EMPLOYEE_3\tOlivia\tDavis\t6\t\n",
+      "EMPLOYEE_20\tSophia\tHarris\t7\t\n",
       "EMPLOYEE_15\tEmma\tJohnson\t6\t\n",
-      "EMPLOYEE_9\tAndrew\tWilson\t5\t\n",
+      "EMPLOYEE_3\tOlivia\tDavis\t6\t\n",
       "EMPLOYEE_13\tDaniel\tDavis\t5\t\n",
+      "EMPLOYEE_9\tAndrew\tWilson\t5\t\n",
       "EMPLOYEE_30\tEmma\tClark\t5\t\n",
-      "EMPLOYEE_27\tSophia\tDavis\t4\t\n",
       "EMPLOYEE_21\tOlivia\tClark\t4\t\n",
       "EMPLOYEE_17\tDavid\tMiller\t4\t\n",
       "EMPLOYEE_28\tMichael\tJohnson\t4\t\n",
-      "EMPLOYEE_5\tDavid\tTaylor\t3\t\n",
+      "EMPLOYEE_27\tSophia\tDavis\t4\t\n",
       "EMPLOYEE_1\tJane\tSmith\t3\t\n",
+      "EMPLOYEE_5\tDavid\tTaylor\t3\t\n",
       "EMPLOYEE_24\tOlivia\tWilson\t2\t\n",
       "EMPLOYEE_18\tEmily\tBrown\t1\t\n",
       "EMPLOYEE_25\tEmily\tWilson\t1\t\n"
@@ -247,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "33e58779-f187-414e-b095-1053ca775216",
    "metadata": {},
    "outputs": [],
@@ -282,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
