--- a/notebooks/competence-kg-neo4j.ipynb
+++ b/notebooks/competence-kg-neo4j.ipynb
@@ -10,18 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting neo4j==5.0.1\n",
-      "  Downloading neo4j-5.0.1.tar.gz (172 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m172.4/172.4 kB\u001b[0m \u001b[31m8.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hRequirement already satisfied: pytz in /opt/conda/lib/python3.11/site-packages (from neo4j==5.0.1) (2023.3)\n",
-      "Building wheels for collected packages: neo4j\n",
-      "  Building wheel for neo4j (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for neo4j: filename=neo4j-5.0.1-py3-none-any.whl size=247362 sha256=1701889fb77cadc76f10ccbbc307b83f9fbf737017e691cf0452fdbaab115a6e\n",
-      "  Stored in directory: /home/jovyan/.cache/pip/wheels/c2/33/c6/fa22720f17810f856b71d7a5bfb579f56f6eb1fc00ba00262a\n",
-      "Successfully built neo4j\n",
-      "Installing collected packages: neo4j\n",
-      "Successfully installed neo4j-5.0.1\n"
+      "Requirement already satisfied: neo4j==5.0.1 in /opt/conda/lib/python3.11/site-packages (5.0.1)\n",
+      "Requirement already satisfied: pytz in /opt/conda/lib/python3.11/site-packages (from neo4j==5.0.1) (2023.3.post1)\n"
      ]
     }
    ],
@@ -32,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f74c8541-2658-4e7c-8eab-79fa680199b4",
    "metadata": {},
    "outputs": [],
@@ -53,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "b83cf41b-db7d-4754-a1fb-0690a462e0c2",
    "metadata": {},
    "outputs": [
@@ -161,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "dd912652-cba1-46c0-acb5-cb2c23ce8c61",
    "metadata": {},
    "outputs": [],
@@ -187,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "b2fa9b19-1afd-4dd9-8ea0-b996b946b4aa",
    "metadata": {},
    "outputs": [
@@ -220,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "44ac1028-0e34-4ac6-8eee-48031def66a1",
    "metadata": {},
    "outputs": [
@@ -261,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "bc752dc1-97ca-4020-817e-0e7e25a0b850",
    "metadata": {},
    "outputs": [
@@ -294,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "39feed1c-7e94-4b52-b566-a4f6c53eb14a",
    "metadata": {},
    "outputs": [
@@ -344,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "2fad1566-6bd3-4cf4-b8f6-8a49faf108f1",
    "metadata": {},
    "outputs": [],
@@ -352,6 +342,14 @@
     "# Close the Neo4j driver\n",
     "driver.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22b01b1c-cc0d-4bb8-961e-fdc55f858ce9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -370,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
