--- a/notebooks/competence-kg-neo4j.ipynb
+++ b/notebooks/competence-kg-neo4j.ipynb
@@ -327,7 +327,8 @@
     "custom_query = \"\"\"\n",
     "    MATCH (e:Employee {name:\"Jane\", surname:\"Brown\"})-[:HAS_COMPETENCE]->(c:Competence)<-[:HAS_COMPETENCE]-(oe:Employee)\n",
     "    WITH e, oe, COLLECT(c) as competences\n",
-    "    RETURN oe.name AS name, oe.surname AS surname, size(competences) as num_common_competences ORDER BY num_common_competences DESC\n",
+    "    RETURN oe.name AS name, oe.surname AS surname, size(competences) as num_common_competences \n",
+    "    ORDER BY num_common_competences DESC\n",
     "\"\"\"\n",
     "execute_query(custom_query)"
    ]
